Error fixing infected test